Restore merged accounting audit evidence and legacy references
Co-authored-by: factory-droid[bot] <138933559+factory-droid[bot]@users.noreply.github.com>